--- a/index.scss
+++ b/index.scss
@@ -13,7 +13,7 @@ nav {
   .logo {
     height: 60px;
     width: 60px;
-    background-color: beige;
+    margin-left: 30px;
   }
 
   .links {
@@ -38,11 +38,14 @@ main {
 #visual-slam {
   display: flex;
   flex-direction: row;
+  justify-content: space-between;
+  // border: 1px solid black;
+  width: 90%;
+  max-width: 420px;
 
   .book-cover {
     width: 200px;
     height: 300px;
-    background-color: brown;
   }
 
   .desc {
@@ -106,6 +109,13 @@ main {
 }
 
 @media only screen and (max-width: 620px) {
+
+  nav {
+    .logo {
+      margin-left: 10px;
+    }
+
+  }
 
   #visual-slam {
     flex-direction: column;
