add title to page

--- a/index.css
+++ b/index.css
@@ -2,13 +2,21 @@
   font-family: "Courier New", Courier, monospace;
 }
 
+body {
+  margin: 0;
+}
+
 a {
   text-decoration: none;
 }
 
+.anchor {
+  scroll-margin-top: 64px;
+}
+
 .text-shadow {
   text-shadow: 1px 1px 3px #fffdd0;
-  transition: text-shadow 0.1s ease-in;
+  transition: text-shadow 0.05s ease-in;
 }
 .text-shadow:hover {
   text-shadow: 1px 1px 3px rgba(0, 0, 0, 0.4);
@@ -51,10 +59,6 @@ main .container {
   justify-content: space-between;
   width: 90%;
   max-width: 420px;
-}
-#visual-slam .book-cover {
-  width: 200px;
-  height: 300px;
 }
 #visual-slam .desc {
   max-width: 200px;
