--- a/sun.scss
+++ b/sun.scss
@@ -1,79 +1,121 @@
 .sun-container {
-	position: relative;
-	
-	.sun {
-		position: absolute;
-		z-index: 1;
-	}
-	img {
-		width: 60px;
-		height: 60px;
-		top: 14px;
-		left: 14px;
-		position: absolute;
-		z-index: 2;
-	}
+  position: relative;
+
+  .sun {
+    position: absolute;
+    z-index: 1;
+  }
+  img {
+    width: 60px;
+    height: 60px;
+    top: 14px;
+    left: 14px;
+    position: absolute;
+    z-index: 2;
+  }
+
+  transition: all 0.2s ease-in-out;
+
+  &:hover {
+    .sun {
+      transition: all 0.2s ease-in-out;
+      transform: scale(0.8, 0.8);
+    }
+    img {
+      transition: all 0.2s ease-in-out;
+      transform: scale(1.05, 1.05);
+    }
+  }
+
+  &:active {
+    img {
+      transition: all 0.2s ease-in-out;
+      transform: scale(1.1, 1.1);
+    }
+  }
+  // img {
+  //   top: 0px;
+  //   left: 0px;
+  //   width: 88px;
+  //   height: 88px;
+  // }
 }
 
 .sun {
-	width: 88px;
-	height: 88px;
-	position: relative;
-	background: radial-gradient(transparent 50%, white), radial-gradient(yellow, transparent 70%);
-	-webkit-mask-image: radial-gradient(rgba(0, 0, 0, 1.0) 40%, transparent 65%);
-	mask-image: radial-gradient(rgba(0, 0, 0, 1.0) 40%, transparent 65%);
-	border-radius: 50%;
-	
-	&::after,
-	&::before {
-		content: '';
-		position: absolute;
-		top: 0;
-		left: 0;
-		width: 100%;
-		height: 100%;
-		transform-origin: center;
-		border-radius: 50%;
-		-webkit-mask-image: radial-gradient(rgba(0, 0, 0, 1.0) 40%, transparent 65%);
-	  mask-image: radial-gradient(rgba(0, 0, 0, 1.0) 40%, transparent 65%);
-	}
-	
-	&::before {
-		background: repeating-conic-gradient(from 0deg, yellow 0deg 3deg, transparent 3deg 6deg, rgba(#000, 0.5) 6deg 7deg);
-		animation: rotate 30s linear, scale 3s linear infinite;
-	}
-	
-	&::after {
-		background: radial-gradient(yellow, orange 27%, transparent calc(27% + 3px) 100%), radial-gradient(gold, transparent 70%), repeating-conic-gradient(from 0deg, gold 0deg 5deg, transparent 5deg 10deg);
-		transform: rotate(300deg);
-		animation: rotate 3s ease-in reverse ;
-		animation-iteration-count: infinite;
-	}
+  width: 88px;
+  height: 88px;
+  position: relative;
+  background: radial-gradient(transparent 50%, white),
+    radial-gradient(yellow, transparent 70%);
+  -webkit-mask-image: radial-gradient(rgba(0, 0, 0, 1) 40%, transparent 65%);
+  mask-image: radial-gradient(rgba(0, 0, 0, 1) 40%, transparent 65%);
+  border-radius: 50%;
+
+  &::after,
+  &::before {
+    content: "";
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    transform-origin: center;
+    border-radius: 50%;
+    -webkit-mask-image: radial-gradient(rgba(0, 0, 0, 1) 40%, transparent 65%);
+    mask-image: radial-gradient(rgba(0, 0, 0, 1) 40%, transparent 65%);
+  }
+
+  &::before {
+    background: repeating-conic-gradient(
+      from 0deg,
+      yellow 0deg 3deg,
+      transparent 3deg 6deg,
+      rgba(#000, 0.5) 6deg 7deg
+    );
+    animation: rotate 30s linear, scale 3s linear infinite;
+  }
+
+  &::after {
+    background: radial-gradient(
+        yellow,
+        orange 27%,
+        transparent calc(27% + 3px) 100%
+      ),
+      radial-gradient(gold, transparent 70%),
+      repeating-conic-gradient(
+        from 0deg,
+        gold 0deg 5deg,
+        transparent 5deg 10deg
+      );
+    transform: rotate(300deg);
+    animation: rotate 3s ease-in reverse;
+    animation-iteration-count: infinite;
+  }
 }
 
 @keyframes rotate {
-	100% {
-		transform: rotate(360deg);
-	}
+  100% {
+    transform: rotate(360deg);
+  }
 }
 
 @keyframes scale {
-	0% {
-		transform: scale(1);
-	}
-	20% {
-		transform: scale(1.3);
-	}
-	40% {
-		transform: scale(0.7);
-	}
-	60% {
-		transform: scale(1.3);
-	}
-	70% {
-		transform: scale(0.8);
-	}
-	100% {
-		transform: scale(1.2);
-	}
+  0% {
+    transform: scale(1);
+  }
+  20% {
+    transform: scale(1.3);
+  }
+  40% {
+    transform: scale(0.7);
+  }
+  60% {
+    transform: scale(1.3);
+  }
+  70% {
+    transform: scale(0.8);
+  }
+  100% {
+    transform: scale(1.2);
+  }
 }
