--- a/index.css
+++ b/index.css
@@ -25,10 +25,10 @@ a {
 nav {
   position: sticky;
   top: 0;
-  height: 60px;
+  height: 70px;
   display: flex;
   justify-content: space-between;
-  background-color: white;
+  background-image: linear-gradient(white 85%, transparent);
   z-index: 6;
 }
 nav .logo {
@@ -42,6 +42,11 @@ nav .links {
   justify-content: space-around;
   align-items: center;
   width: 80%;
+}
+
+.gradient-white-trans_vert {
+  background-image: linear-gradient(white, transparent);
+  height: 20px;
 }
 
 main {
