--- a/index.scss
+++ b/index.scss
@@ -25,11 +25,12 @@ a {
 nav {
   position: sticky;
   top: 0;
-  height: 60px;
+  height: 70px;
   display: flex;
   justify-content: space-between;
-  background-color: white;
+  background-image: linear-gradient(white 85%, transparent);
   z-index: 6;
+
 
   .logo {
     height: 60px;
@@ -44,6 +45,11 @@ nav {
     align-items: center;
     width: 80%;
   }
+}
+
+.gradient-white-trans_vert {
+  background-image: linear-gradient(white, transparent);
+  height: 20px;
 }
 
 main {
