--- a/index.css
+++ b/index.css
@@ -23,6 +23,10 @@ a {
   text-shadow: 1px 1px 3px rgba(0, 0, 0, 0.4);
 }
 
+.padding-0 {
+  padding: 0;
+}
+
 nav {
   position: sticky;
   top: 0;
@@ -45,46 +49,59 @@ nav .links {
   width: 80%;
 }
 
-.gradient-white-trans_vert {
-  background-image: linear-gradient(white, transparent);
-  height: 20px;
-}
-
 main {
   display: flex;
   flex-direction: column;
   align-items: center;
 }
 main .container {
-  margin-top: 20px;
+  padding: 25px 0;
 }
 
 #visual-slam {
   display: flex;
+  justify-content: center;
+  width: 100%;
+  background-image: linear-gradient(to right, white, white 50%, rgba(135, 206, 235, 0.5));
+}
+#visual-slam .stuff {
+  display: flex;
   flex-direction: row;
   justify-content: space-between;
-  width: 90%;
   max-width: 420px;
+  width: 420px;
 }
-#visual-slam .desc {
+#visual-slam .stuff .desc {
   max-width: 200px;
 }
-#visual-slam .desc span {
+#visual-slam .stuff .desc span {
   text-shadow: 1px 1px 3px #fffdd0;
   vertical-align: middle;
 }
 
 #whoami {
   display: flex;
-  flex-direction: row;
-}
-#whoami .desc {
-  max-width: 200px;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  background-color: blanchedalmond;
+  width: 100%;
 }
 #whoami .boyowa {
-  width: 200px;
-  height: 250px;
-  background-color: blanchedalmond;
+  width: 176px;
+  height: 176px;
+}
+#whoami .desc {
+  max-width: 400px;
+  padding: 0 15px;
+}
+#whoami .text-break {
+  display: block;
+  font-size: 30px;
+  font-weight: bold;
+  text-align: center;
+  padding-top: 10px;
+  margin: 0 auto;
 }
 
 #connect {
@@ -92,7 +109,6 @@ main .container {
   flex-direction: column;
   max-width: 500px;
   width: 300px;
-  margin-bottom: 20px;
 }
 #connect form {
   display: flex;
@@ -123,11 +139,11 @@ main .container {
   nav .logo {
     margin-left: 10px;
   }
-  #visual-slam {
+  #visual-slam .stuff {
     flex-direction: column;
     align-items: center;
   }
-  #visual-slam .desc {
+  #visual-slam .stuff .desc {
     margin-top: 15px;
   }
 }/*# sourceMappingURL=index.css.map */
