--- a/index.scss
+++ b/index.scss
@@ -23,6 +23,10 @@ a {
   }
 }
 
+.padding-0 {
+  padding: 0;
+}
+
 nav {
   position: sticky;
   top: 0;
@@ -31,7 +35,6 @@ nav {
   justify-content: space-between;
   background-image: linear-gradient(white 85%, transparent);
   z-index: 6;
-
 
   .logo {
     height: 60px;
@@ -48,51 +51,71 @@ nav {
   }
 }
 
-.gradient-white-trans_vert {
-  background-image: linear-gradient(white, transparent);
-  height: 20px;
-}
-
 main {
   display: flex;
   flex-direction: column;
   align-items: center;
 
   .container {
-    margin-top: 20px;
+    padding: 25px 0;
   }
 }
 
 #visual-slam {
   display: flex;
-  flex-direction: row;
-  justify-content: space-between;
-  width: 90%;
-  max-width: 420px;
+  justify-content: center;
+  width: 100%;
+  // background-color: skyblue;
+  background-image: linear-gradient(
+    to right,
+    white,
+    white 50%,
+    rgba(135, 206, 235, 0.5)
+  );
+  .stuff {
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+    max-width: 420px;
+    width: 420px;
 
-  .desc {
-    max-width: 200px;
+    .desc {
+      max-width: 200px;
 
-    span {
-      text-shadow: 1px 1px 3px rgba(#fffdd0, 1);
-      vertical-align: middle;
+      span {
+        text-shadow: 1px 1px 3px rgba(#fffdd0, 1);
+        vertical-align: middle;
+      }
     }
   }
 }
 
 #whoami {
   display: flex;
-  flex-direction: row;
-
-  .desc {
-    max-width: 200px;
-  }
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  background-color: blanchedalmond;
+  width: 100%;
 
   .boyowa {
-    width: 200px;
-    height: 250px;
-    background-color: blanchedalmond;
+    width: 176px;
+    height: 176px;
   }
+
+  .desc {
+    max-width: 400px;
+    padding: 0 15px;
+  }
+
+  .text-break {
+    display: block;
+    font-size: 30px;
+    font-weight: bold;
+    text-align: center;
+    padding-top: 10px;
+    margin: 0 auto;
+  };
 }
 
 #connect {
@@ -100,7 +123,6 @@ main {
   flex-direction: column;
   max-width: 500px;
   width: 300px;
-  margin-bottom: 20px;
 
   form {
     display: flex;
@@ -139,11 +161,12 @@ main {
   }
 
   #visual-slam {
-    flex-direction: column;
-    align-items: center;
-
-    .desc {
-      margin-top: 15px;
+    .stuff {
+      flex-direction: column;
+      align-items: center;
+      .desc {
+        margin-top: 15px;
+      }
     }
   }
 }
