--- a/index.css
+++ b/index.css
@@ -95,10 +95,24 @@ main .container {
   max-width: 400px;
   padding: 0 15px;
 }
+#whoami .show-more {
+  color: palevioletred;
+  display: block;
+  font-weight: bold;
+  padding-top: 10px;
+  text-align: center;
+  cursor: pointer;
+  white-space: nowrap;
+}
+#whoami .show-more:hover {
+  text-decoration: underline;
+}
+#whoami .more-to-show {
+  display: none;
+}
 #whoami .text-break {
   display: block;
   font-size: 30px;
-  font-weight: bold;
   text-align: center;
   padding-top: 10px;
   margin: 0 auto;
