--- a/index.scss
+++ b/index.scss
@@ -108,10 +108,28 @@ main {
     padding: 0 15px;
   }
 
+  .show-more {
+    color: palevioletred;
+    display: block;
+    font-weight: bold;
+    padding-top: 10px;
+    text-align: center;
+    cursor: pointer;
+    white-space: nowrap;
+
+    &:hover {
+      text-decoration: underline;
+    }
+  }
+
+  .more-to-show {
+    display: none;
+  }
+
   .text-break {
     display: block;
     font-size: 30px;
-    font-weight: bold;
+    // font-weight: bold;
     text-align: center;
     padding-top: 10px;
     margin: 0 auto;
