--- a/index.scss
+++ b/index.scss
@@ -86,7 +86,6 @@ main {
     //   mask-image: linear-gradient(to left, white, white 50%, rgba(0,0,0,0));
     //   opacity: 0.25;
     // }
-    
   }
 }
 
@@ -198,62 +197,94 @@ main {
     rgba(135, 206, 235, 0.5)
   );
 
-  .title {
-    font-size: 21px;
-    font-weight: bold;
-    padding-bottom: 10px;
-    text-align: center;
-  }
-
-  form {
-    display: flex;
-    flex-direction: column;
-    width: 300px;
-
-    & > * {
-      margin: 1px 0;
+  .connect {
+    .title {
+      display: block;
+      font-size: 21px;
+      font-weight: bold;
+      padding-bottom: 10px;
+      width: 100%;
+      text-align: center;
     }
 
-    button {
-      &:hover {
-        cursor: pointer;
+    form {
+      display: flex;
+      flex-direction: column;
+      width: 300px;
+
+      & > * {
+        margin: 1px 0;
+      }
+
+      button {
+        &:hover {
+          cursor: pointer;
+        }
+      }
+
+      textarea {
+        resize: vertical;
       }
     }
 
-    textarea {
-      resize: vertical;
+    .form-input {
+      border: 1px solid rgba(135, 206, 235, 1);
+      padding: 7px 3px;
+      background-image: linear-gradient(
+        to bottom right,
+        white,
+        white 50%,
+        rgba(135, 206, 235, 0.2)
+      );
+
+      &:hover {
+        transition: 0.2s ease;
+        background-color: rgba(135, 206, 235, 0.2);
+        background-image: none;
+      }
+
+      &:focus {
+        outline: none;
+        // border: 2px solid rgba(135, 206, 235, 1);
+      }
     }
-  }
+    .first-last-name {
+      display: grid;
+      grid-template-columns: 150px 150px;
 
-  .form-input {
-    border: 1px solid rgba(135, 206, 235, 1);
-    padding: 7px 3px;
-    background-image: linear-gradient(
-      to bottom right,
-      white,
-      white 50%,
-      rgba(135, 206, 235, 0.2)
-    );
-  }
-  .first-last-name {
-    display: grid;
-    grid-template-columns: 150px 150px;
-
-    .first {
-      margin-right: 1px;
+      .first {
+        margin-right: 1px;
+      }
+      .last {
+        margin-left: 1px;
+      }
     }
-    .last {
-      margin-left: 1px;
-    }
-  }
 
-  .socials {
-    display: flex;
-    justify-content: flex-start;
+    .socials {
+      display: flex;
+      justify-content: flex-start;
+      flex-direction: row;
 
-    .icon {
-      width: 30px;
-      margin: 0 10px;
+      a {
+        display: block;
+        margin-top: 5px;
+        .icon {
+          width: 35px;
+          height: 35px;
+          margin-right: 6px;
+          // box-shadow: rgba(135, 206, 235, 1) 1px 1px 2px;
+
+          &:hover {
+            transition: 0.2s ease;
+            transform: scale(1.1, 1.1);
+          }
+
+          &:active {
+            background-color: rgba(135, 206, 235, 1);
+            border-radius: 6px;
+          }
+        }
+      }
     }
   }
 }
