--- a/sun.scss
+++ b/sun.scss
@@ -119,3 +119,18 @@
     transform: scale(1.2);
   }
 }
+
+@media only screen and (max-width: 620px) {
+  .sun-container {
+    top: -10px;
+    left: -10px;
+    .sun {
+      width: 70px;
+      height: 70px;
+    }
+    img {
+      width: 50px;
+      height: 50px;
+    }
+  }
+}
