--- a/index.css
+++ b/index.css
@@ -24,12 +24,22 @@ a {
   text-shadow: 1px 1px 3px rgba(0, 0, 0, 0.4);
 }
 
+.dropdown-item_my {
+  display: block;
+  width: 100%;
+  padding: 0.25rem 1.5rem;
+  white-space: nowrap;
+  background-color: transparent;
+  border: 0;
+  color: #007bff;
+}
+
 .hidden {
   display: none;
 }
 
 nav {
-  position: sticky;
+  position: sticky !important;
   top: 0;
   height: 70px;
   display: flex;
@@ -242,7 +252,22 @@ main .container .grain {
   margin: 0 3px;
 }
 
+@media only screen and (min-width: 621px) {
+  #nav-dropdown {
+    display: none;
+  }
+}
 @media only screen and (max-width: 620px) {
+  #nav-horizontal {
+    display: none;
+  }
+  #nav-dropdown {
+    padding: 0;
+  }
+  #nav-dropdown .dropdown-toggle {
+    padding: 0;
+    padding-bottom: 10px;
+  }
   nav {
     height: 60px;
   }
