--- a/index.scss
+++ b/index.scss
@@ -24,12 +24,22 @@ a {
   }
 }
 
+.dropdown-item_my {
+  display: block;
+  width: 100%;
+  padding: .25rem 1.5rem;
+  white-space: nowrap;
+  background-color: transparent;
+  border: 0;
+  color: #007bff;
+}
+
 .hidden {
   display: none;
 }
 
 nav {
-  position: sticky;
+  position: sticky !important;
   top: 0;
   height: 70px;
   display: flex;
@@ -313,7 +323,25 @@ main {
   }
 }
 
+@media only screen and (min-width: 621px) {
+  #nav-dropdown {
+    display: none;
+  }
+}
+
 @media only screen and (max-width: 620px) {
+
+  #nav-horizontal {
+    display: none;
+  }
+  #nav-dropdown {
+    padding: 0;
+    .dropdown-toggle {
+      padding: 0;
+      padding-bottom: 10px;
+    }
+  }
+
   nav {
     height: 60px;
     .logo {
