--- a/book.css
+++ b/book.css
@@ -1,6 +1,6 @@
 .book {
-  width: 200px;
-  height: 250px;
+  width: 240px;
+  height: 300px;
   margin-left: auto;
   margin-right: auto;
   position: relative;
@@ -32,6 +32,11 @@
   bottom: 0;
   transform-origin: left center;
   transition: transform 0.2s ease-in;
+}
+
+.book-cover img {
+  width: 240px;
+  height: 300px;
 }
 
 .book-cover,
