--- a/book.scss
+++ b/book.scss
@@ -1,6 +1,9 @@
+$width: 240px;
+$height: 300px;
+
 .book {
-  width: 200px;
-  height: 250px;
+  width: $width;
+  height: $height;
   margin-left: auto;
   margin-right: auto;
   // margin-top: 48px;
@@ -37,10 +40,16 @@
   transform-origin: left center;
   transition: transform 0.2s ease-in;
 }
-
+.book-cover {
+  img {
+    width: $width;
+    height: $height;
+  }
+}
 .book-cover,
 .book-pages {
   transform-style: preserve-3d;
+
 }
 
 .book-pages {
