--- a/index.scss
+++ b/index.scss
@@ -71,11 +71,10 @@ main {
   .container {
     padding: 25px 0;
     z-index: 2;
+    display: relative;
 
     .grain {
       position: absolute;
-      top: 0;
-      left: 0;
       width: 100%;
       height: 100%;
       background-image: url(grain.svg);
@@ -83,7 +82,7 @@ main {
       // background-image: url(grain.svg), linear-gradient(to right, transparent, transparent 50%, #d13531);
       // background-repeat: repeat;
       opacity: 0.25;
-      z-index: -2;
+      z-index: 0;
     }
 
     // .grain-dient {
@@ -118,11 +117,11 @@ main {
     display: flex;
     flex-direction: row;
     justify-content: space-between;
-    max-width: 420px;
-    width: 420px;
+    // max-width: 420px;
+    width: 510px;
 
     .desc {
-      max-width: 200px;
+      max-width: 250px;
 
       span {
         text-shadow: 1px 1px 3px rgba(#fffdd0, 1);
@@ -167,6 +166,7 @@ main {
     padding: 0 15px;
     font-family: Cabin Sketch;
     // font-weight: 700;
+    z-index: 1;
   }
 
   .show-more {
