--- a/index.scss
+++ b/index.scss
@@ -68,8 +68,7 @@ main {
   align-items: center;
   z-index: 1;
 
-  .container {
-    padding: 25px 0;
+  .my-container {
     z-index: 2;
     display: relative;
 
@@ -118,6 +117,7 @@ main {
     flex-direction: row;
     justify-content: space-between;
     // max-width: 420px;
+    padding: 25px 0;
     width: 510px;
 
     .desc {
@@ -145,6 +145,8 @@ main {
   );
   width: 100%;
   position: relative;
+
+  padding: 25px 0;
 
   .slideshow {
     display: flex;
@@ -207,6 +209,7 @@ main {
   flex-direction: column;
   align-items: center;
   width: 100%;
+  padding: 25px 0;
   background-image: linear-gradient(
     to bottom right,
     white,
