--- a/index.scss
+++ b/index.scss
@@ -47,6 +47,11 @@ nav {
   background-image: linear-gradient(white 85%, transparent);
   z-index: 6;
 
+  font-family: Amatic SC;
+  font-size: 23px;
+  // font-weight: bold;
+  letter-spacing: 0.1rem;
+
   .logo {
     height: 60px;
     width: 60px;
