--- a/src/css/index.css
+++ b/src/css/index.css
@@ -77,7 +77,7 @@ main .my-container .grain {
   position: absolute;
   width: 100%;
   height: 100%;
-  background-image: url(grain.svg);
+  background-image: url(../images/grain.svg);
   opacity: 0.25;
   z-index: 0;
 }
