--- a/src/css/index.scss
+++ b/src/css/index.scss
@@ -81,7 +81,7 @@ main {
       position: absolute;
       width: 100%;
       height: 100%;
-      background-image: url(grain.svg);
+      background-image: url(../images/grain.svg);
       // background: url(grain.svg);
       // background-image: url(grain.svg), linear-gradient(to right, transparent, transparent 50%, #d13531);
       // background-repeat: repeat;
