--- a/src/css/index.scss
+++ b/src/css/index.scss
@@ -327,6 +327,7 @@ main {
   align-items: center;
   height: 100px;
   color: whitesmoke;
+  font-size: 14px;
   background-color: rgb(26, 0, 0);
 
   #year {
