--- a/src/css/book.css
+++ b/src/css/book.css
@@ -118,16 +118,21 @@
 }
 .book:hover .book-pages + .book-pages::before {
   transform: rotateY(-16deg);
+  background-image: linear-gradient(transparent, rgba(255, 255, 255, 0.1) 10%, rgba(255, 255, 255, 0.5) 20%, rgba(50, 211, 136, 0.8) 40%, transparent 60%, rgba(255, 0, 0, 0.6) 90%, transparent);
 }
 .book:hover .book-pages + .book-pages + .book-pages::after {
   transform: rotateY(-28deg);
+  background-image: linear-gradient(transparent, rgba(255, 255, 0, 0.5) 35%, transparent 40%, blanchedalmond 50%, skyblue 75%, transparent 95%, darkorange);
 }
 .book:hover .book-pages + .book-pages + .book-pages::before {
   transform: rotateY(-24deg);
+  background-image: linear-gradient(to top, transparent, rgba(255, 255, 0, 0.5) 35%, transparent 40%, rgb(155, 155, 241) 50%, blanchedalmond 75%, transparent 85%, orange 90%, greenyellow 95%);
 }
 .book:hover .book-pages + .book-pages + .book-pages + .book-pages::after {
   transform: rotateY(-36deg);
+  background-image: linear-gradient(transparent, rgba(255, 0, 0, 0.5) 50%, transparent);
 }
 .book:hover .book-pages + .book-pages + .book-pages + .book-pages::before {
   transform: rotateY(-32deg);
+  background-image: linear-gradient(transparent, rgba(0, 255, 0, 0.5) 20%, transparent 50%, cyan 70%, transparent);
 }/*# sourceMappingURL=book.css.map */
