--- a/src/css/book.scss
+++ b/src/css/book.scss
@@ -14,7 +14,7 @@ $height: 300px;
   box-shadow: 2px 2px 2px rgba(#000, 0.5);
 
   &:hover {
-    cursor:pointer;
+    cursor: pointer;
   }
 }
 
@@ -49,7 +49,6 @@ $height: 300px;
 .book-cover,
 .book-pages {
   transform-style: preserve-3d;
-
 }
 
 .book-pages {
@@ -148,24 +147,65 @@ $height: 300px;
     }
     &::before {
       transform: rotateY(-16deg);
+      background-image: linear-gradient(
+        transparent,
+        rgba(255, 255, 255, 0.1) 10%,
+        rgba(255, 255, 255, 0.5) 20%,
+        rgba(50, 211, 136, 0.8) 40%,
+        transparent 60%,
+        rgba(255, 0, 0, 0.6) 90%,
+        transparent
+      );
     }
   }
 
   .book-pages + .book-pages + .book-pages {
     &::after {
       transform: rotateY(-28deg);
+      background-image: linear-gradient(
+        transparent,
+        rgba(255, 255, 0, 0.5) 35%,
+        transparent 40%,
+        blanchedalmond 50%,
+        skyblue 75%,
+        transparent 95%,
+        darkorange
+      );
     }
     &::before {
       transform: rotateY(-24deg);
+      background-image: linear-gradient(
+        to top,
+        transparent,
+        rgba(255, 255, 0, 0.5) 35%,
+        transparent 40%,
+        rgb(155, 155, 241) 50%,
+        blanchedalmond 75%,
+        transparent 85%,
+        orange 90%,
+        greenyellow 95%
+      );
     }
   }
 
   .book-pages + .book-pages + .book-pages + .book-pages {
     &::after {
       transform: rotateY(-36deg);
+      background-image: linear-gradient(
+        transparent,
+        rgba(255, 0, 0, 0.5) 50%,
+        transparent
+      );
     }
     &::before {
       transform: rotateY(-32deg);
+      background-image: linear-gradient(
+        transparent,
+        rgba(0, 255, 0, 0.5) 20%,
+        transparent 50%,
+        cyan 70%,
+        transparent
+      );
     }
   }
 }
