--- a/src/css/index.scss
+++ b/src/css/index.scss
@@ -139,6 +139,43 @@ main {
   }
 }
 
+#healing {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+
+  .title {
+    font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
+    font-size: 1.4rem;
+    .inf {
+      font-size: 1rem;
+    }
+  }
+
+  .desc {
+    font-family:'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+    text-align: center;
+    padding-top: 10px;
+
+    .we-can-address {
+      color: #696969;
+    }
+    .anything-really {
+      color: #919191;
+    }
+  }
+  // background-color: white;
+  // background-color: blanchedalmond;
+  // background-image: linear-gradient(
+  //   to left,
+  //   white,
+  //   blanchedalmond 40%,
+  //   blanchedalmond
+  
+  width: 100%;
+}
+
 #whoami {
   display: flex;
   flex-direction: column;
