--- a/src/css/index.scss
+++ b/src/css/index.scss
@@ -169,6 +169,18 @@ main {
       color: #919191;
     }
   }
+
+  .photo-container {
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+
+    .photo {
+      height: 132px;
+      width: 132px;
+      border-radius: 50%;
+    }
+  }
   // background-color: white;
   // background-color: blanchedalmond;
   // background-image: linear-gradient(
