add #music section with video to Presencia

--- a/src/css/index.scss
+++ b/src/css/index.scss
@@ -192,6 +192,52 @@ main {
   width: 100%;
 }
 
+#music {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  padding: 0 0 10px 0;
+  color:#d60000;
+  font-family: Cabin Sketch;
+  background: linear-gradient(90deg, rgba(255, 123, 0, 0.918) 20%, rgba(255, 123, 0, 0.25) 50%, rgba(255, 123, 0, 0.918) 80%);
+
+  .title {
+    z-index: 1;
+    // font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
+    font-size: 1.7rem;
+    font-weight: bold;
+  }
+  .desc {
+    font-family: Cabin Sketch;
+  }
+
+  .music-video {
+    margin: 20px 5px 10px 5px;
+
+    iframe {
+      width: 420px;
+      height: 315px;
+    }
+    
+    @media screen and (max-width: 600px) {
+      iframe {
+        width: 320px;
+        height: 240px;
+      }
+    }
+  }
+  .more {
+    font-family: 'Courier New', Courier, monospace;
+
+    .link-discography {
+      font-family: Cabin Sketch;
+      font-weight: bold;
+      text-decoration: underline;
+    }
+  }
+  
+}
+
 #whoami {
   display: flex;
   flex-direction: column;
