--- a/src/css/index.css
+++ b/src/css/index.css
@@ -148,6 +148,45 @@ main .my-container .grain {
   border-radius: 50%;
 }
 
+#music {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  padding: 0 0 10px 0;
+  color: #d60000;
+  font-family: Cabin Sketch;
+  background: linear-gradient(90deg, rgba(255, 123, 0, 0.918) 20%, rgba(255, 123, 0, 0.25) 50%, rgba(255, 123, 0, 0.918) 80%);
+}
+#music .title {
+  z-index: 1;
+  font-size: 1.7rem;
+  font-weight: bold;
+}
+#music .desc {
+  font-family: Cabin Sketch;
+}
+#music .music-video {
+  margin: 20px 5px 10px 5px;
+}
+#music .music-video iframe {
+  width: 420px;
+  height: 315px;
+}
+@media screen and (max-width: 600px) {
+  #music .music-video iframe {
+    width: 320px;
+    height: 240px;
+  }
+}
+#music .more {
+  font-family: "Courier New", Courier, monospace;
+}
+#music .more .link-discography {
+  font-family: Cabin Sketch;
+  font-weight: bold;
+  text-decoration: underline;
+}
+
 #whoami {
   display: flex;
   flex-direction: column;
