--- a/src/css/index.css
+++ b/src/css/index.css
@@ -144,7 +144,7 @@ main .my-container .grain {
 }
 #healing .photo-container .photo {
   height: 132px;
-  width: 132px;
+  width: 132ddpx;
   border-radius: 50%;
 }
 
@@ -165,15 +165,27 @@ main .my-container .grain {
 #music .desc {
   font-family: Cabin Sketch;
 }
-#music .music-video {
+#music .music-video-container {
+  display: flex;
+  flex-direction: row;
+}
+@media screen and (max-width: 840) {
+  #music .music-video-container {
+    flex-direction: column;
+  }
+}
+#music .music-video-container .music-video {
   margin: 20px 5px 10px 5px;
 }
-#music .music-video iframe {
+#music .music-video-container .music-video iframe {
   width: 420px;
   height: 315px;
 }
 @media screen and (max-width: 600px) {
-  #music .music-video iframe {
+  #music .music-video-container .music-video {
+    margin: 5px 5px 5px 5px;
+  }
+  #music .music-video-container .music-video iframe {
     width: 320px;
     height: 240px;
   }
