--- a/src/css/index.scss
+++ b/src/css/index.scss
@@ -177,7 +177,7 @@ main {
 
     .photo {
       height: 132px;
-      width: 132px;
+      width: 132ddpx;
       border-radius: 50%;
     }
   }
@@ -211,21 +211,37 @@ main {
     font-family: Cabin Sketch;
   }
 
-  .music-video {
-    margin: 20px 5px 10px 5px;
+  .music-video-container {
+    display: flex;
+    flex-direction: row;
 
-    iframe {
-      width: 420px;
-      height: 315px;
+    @media screen and (max-width: 840) {
+      flex-direction: column;
     }
-    
-    @media screen and (max-width: 600px) {
+
+    .music-video {
+      margin: 20px 5px 10px 5px;
+  
       iframe {
-        width: 320px;
-        height: 240px;
+        width: 420px;
+        height: 315px;
+      }
+      
+      @media screen and (max-width: 600px) {
+        margin: 5px 5px 5px 5px;
+
+        iframe {
+          width: 320px;
+          height: 240px;
+        }
       }
     }
+  
   }
+
+  
+  
+  
   .more {
     font-family: 'Courier New', Courier, monospace;
 
