--- a/src/app/ui/music.module.css
+++ b/src/app/ui/music.module.css
@@ -1,4 +1,4 @@
-
+/* 
 @media only screen and (max-width: 840) {
   .music-video-container {
     flex-direction: column;
@@ -14,4 +14,4 @@
     width: 320px;
     height: 240px;
  }
-}
+} */
