--- a/src/app/ui/book.scss
+++ b/src/app/ui/book.scss
@@ -15,6 +15,31 @@ $height: 300px;
 
   &:hover {
     cursor: pointer;
+
+    .click-to-open {
+      opacity: 0;
+      transition: opacity 0.25s linear;
+    }
+  }
+
+  .click-to-open {
+    position: absolute;
+    top: 87%;
+    left: 25%;
+
+    opacity: 1;
+    transition: opacity 0.25s linear;
+
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+
+    .text {
+      display: inline-block;
+      padding: 0px 5px;
+      background-color: (rgba($color: #000000, $alpha: 0.2));
+      color: rgba($color: #000000, $alpha: 0.7)
+    }
   }
 }
 
