--- a/src/app/index.scss
+++ b/src/app/index.scss
@@ -41,6 +41,18 @@ a {
   display: none;
 }
 
+.btn-cta {
+  border: none;
+  border-radius: 5px;
+  background-color: #8ad5f5;
+  transition: all 0.2s ease;
+
+  &:hover {
+    color: blue;
+    padding: 2px 10px;
+  }
+}
+
 nav {
   position: sticky !important;
   top: 0;
