implement /healing who is this for, whoami, and modify whoami on home and healing page, compacted

--- a/src/app/index.scss
+++ b/src/app/index.scss
@@ -53,6 +53,12 @@ a {
   }
 }
 
+.p-column-mobile {
+  display: 'inline-block';
+  text-align: "left";
+  max-width: '320px';
+}
+
 nav {
   position: sticky !important;
   top: 0;
