--- a/src/app/index.scss
+++ b/src/app/index.scss
@@ -267,6 +267,19 @@ main {
 
   .more {
     font-family: 'Courier New', Courier, monospace;
+    font-size: 22px;
+
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+
+    .click-for-more {
+      color:#d60000;
+
+      &:hover {
+        text-decoration: underline;
+      }
+    }
 
     .link-discography {
       font-family: Cabin Sketch;
