--- a/src/app/web-dev/components/Project.css
+++ b/src/app/web-dev/components/Project.css
@@ -51,6 +51,13 @@
     font-size: 24px;
     font-weight: bold;
     margin-bottom: 15px;
+    text-decoration: underline;
+}
+.project__title:hover {
+    color: blue;
+    font-size: 24px;
+    font-weight: bold;
+    margin-bottom: 15px;
 }
 
 .project__desc {
