--- a/src/app/web-dev/components/Social.css
+++ b/src/app/web-dev/components/Social.css
@@ -17,6 +17,24 @@
     filter: drop-shadow(2px 3px 3px rgba(34,34,34,1));
 }
 
+.social-resume {
+    margin-bottom: 10px;
+}
+.social-resume a{
+    color: red;
+    font-weight: bold;
+    font-size: 16px;
+    text-decoration: none;
+}
+.social-resume a:hover{
+    text-decoration: underline;
+}
+.pdf-icon {
+    margin-right: 5px;
+    width: 24px;
+    height: 24px;
+}
+
 @media screen and (max-width: 1000px) {
     .social-icon {
         font-size: 2.5em;
