--- a/src/app/index.scss
+++ b/src/app/index.scss
@@ -175,10 +175,16 @@ main {
   .title {
     z-index: 1;
     font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
-    font-size: 1.5rem;
+    font-size: 1.7rem;
     .inf {
       font-size: 1.2rem;
     }
+  }
+  .subtitle {
+    z-index: 1;
+    font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
+    font-size: 1rem;
+    color:#5288a0;
   }
 
   .desc {
@@ -540,6 +546,9 @@ main {
   #healing {
     .title {
       font-size: 1.2rem;
+    }
+    .subtitle {
+      font-size: 0.9rem;
     }
   }
   
