--- a/src/app/index.scss
+++ b/src/app/index.scss
@@ -248,12 +248,12 @@ main {
 
   .music-video-container {
     display: flex;
-    flex-direction: column;
+    flex-direction: row;
 
-    // @media only screen and (max-width: 840) {
-    //   flex-direction: column;
-    //   align-items: center;
-    // }
+    @media only screen and (max-width: 840px) {
+      flex-direction: column;
+      align-items: center;
+    }
 
     .music-video {
       margin: 15px 5px 0px 5px;
