--- a/src/app/ui/book.scss
+++ b/src/app/ui/book.scss
@@ -1,11 +1,15 @@
 $width: 240px;
 $height: 300px;
 
+$width_mobile: 160px;
+$height_mobile: 200px;
+
 .book {
   width: $width;
   height: $height;
   margin-left: auto;
   margin-right: auto;
+  margin-bottom: 10px;
   // margin-top: 48px;
   position: relative;
   perspective: 1000px;
@@ -25,7 +29,7 @@ $height: 300px;
   .click-to-open {
     position: absolute;
     top: 87%;
-    left: 25%;
+    left: 31%;
 
     opacity: 1;
     transition: opacity 0.25s linear;
@@ -35,10 +39,11 @@ $height: 300px;
     justify-content: center;
 
     .text {
+      font-size: 0.8rem;
       display: inline-block;
       padding: 0px 5px;
-      background-color: (rgba($color: #000000, $alpha: 0.2));
-      color: rgba($color: #000000, $alpha: 0.7)
+      background-color: (rgba($color: #000000, $alpha: 0.05));
+      color: rgba($color: #000000, $alpha: 0.4)
     }
   }
 }
@@ -49,8 +54,11 @@ $height: 300px;
   display: block;
 }
 
-.book-back {
+.book-back-visual_slam {
   background-color: yellow;
+}
+.book-back-elemental {
+  background-color: burlywood;
 }
 
 .book-inner,
@@ -231,6 +239,25 @@ $height: 300px;
         cyan 70%,
         transparent
       );
+    }
+  }
+}
+
+@media screen and (max-width: 620px) {
+  .book {
+    width: $width_mobile;
+    height: $height_mobile;
+    margin-left: 5px;
+    margin-right: 5px;
+    
+    .click-to-open {
+      left: 25%;
+    }
+  }
+  .book-cover {
+    img {
+      width: $width_mobile;
+      height: $height_mobile;
     }
   }
 }
