--- a/src/app/index.scss
+++ b/src/app/index.scss
@@ -195,17 +195,19 @@ main {
     z-index: 1;
     font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
     font-size: 1rem;
-    color:#5288a0;
+    color:#a5a5a5;
   }
 
   .desc {
     z-index: 1;
     font-family:'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
     text-align: center;
+    margin-top: 10px;
     // padding-top: 10px;
 
     .we-can-address {
-      color: #696969;
+      // color: #696969;
+      color: #5288a0;
     }
     .anything-really {
       color: #919191;
