--- a/src/app/index.scss
+++ b/src/app/index.scss
@@ -243,7 +243,7 @@ main {
   display: flex;
   flex-direction: column;
   align-items: center;
-  padding: 0 0 10px 0;
+  padding: 0 0 15px 0;
   color:#d60000;
   font-family: Cabin Sketch;
   background: linear-gradient(90deg, rgba(255, 123, 0, 0.918) 20%, rgba(255, 123, 0, 0.25) 50%, rgba(255, 123, 0, 0.918) 80%);
@@ -298,6 +298,7 @@ main {
 
     .click-for-more {
       color:#d60000;
+      font-weight: bold;
       
       &:hover {
         text-decoration: underline;
@@ -320,6 +321,27 @@ main {
 .fadeOut {
   opacity: 0;
   transition: opacity 0.5s ease-out;
+}
+
+#art {
+  color:#684dff;
+  font-family: Cabin Sketch;
+  // background: rgba(59, 130, 246, 0.2);
+  background: linear-gradient(90deg, rgba(59, 130, 246, 0.918) 20%, rgba(59, 130, 246, 0.25) 50%, rgba(59, 130, 246, 0.918) 80%);
+  width: 100%;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  padding: 10px 0 30px 0;
+
+  .title {
+    z-index: 1;
+    // font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
+    font-size: 1.7rem;
+    font-weight: bold;
+    margin-bottom: 5px;
+  }
+  
 }
 
 #whoami {
