--- a/src/app/index.scss
+++ b/src/app/index.scss
@@ -270,6 +270,9 @@ main {
 
     .music-video {
       margin: 15px 5px 0px 5px;
+
+      display: flex;
+      flex-direction: column;
   
       iframe {
         width: 420px;
